# enchiridion-api

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  go.mod  go.sum  mockoon.json  sqlx-data.json  test_consumer.go
.github/workflows/: deploy.yaml  deployment.yaml
cmd/api/: config.go  controller.go  environment.go  main.go
cmd/database/: main.go  migration.go
cmd/expired-announcement-consumer/: main.go
database/: migrate.go
database/migrations/: 000001_create_enum_announcement_status.down.sql  000001_create_enum_announcement_status.up.sql  000002_create_table_announcement.down.sql  000002_create_table_announcement.up.sql  000003_create_table_device.down.sql  000003_create_table_device.up.sql  000004_create_table_device_announcement.down.sql  000004_create_table_device_announcement.up.sql  000005_create_function_update_modified_column.down.sql  000005_create_function_update_modified_column.up.sql  000006_alter_table_announcement_update_modified_column_trigger.down.sql  000006_alter_table_announcement_update_modified_column_trigger.up.sql  000007_alter_table_device_update_modified_column_trigger.down.sql  000007_alter_table_device_update_modified_column_trigger.up.sql  20220618065037_create-user-table.sql  20220714125543_create_permission_table.sql  20220714125659_create_module_table.sql  20220714125704_create_role_table.sql  20220714130005_create_module_permission_table.sql  20220714130010_create_role_permission_table.sql  20220714130641_seed_permission_data.sql  20220714130648_seed_module_data.sql  20220714130655_seed_role_data.sql  20220714131631_seed_module_permission_data.sql  20220714131639_seed_role_permission_data.sql  20220714132028_create_user_table.sql  20220715053305_create_building_table.sql  20220718100714_create_floor_table.sql  20220718101107_create_device_table.sql  20220720084151_create_announcement_table.sql  20220722082901_create_request_table.sql  20220722083842_create_update_modified_column_func.sql  20220722083944_attach_update_modified_column_hook.sql  20220723042103_create_device_announcement_table.sql  20220723155003_add_column_request_table.sql  20220822102355_seed_building_data.sql  20220905163059_seed_floor_data.sql  20220905163105_seed_device_data.sql  20220908141800_alter_request_table_metadata_column.sql  20220908153615_alter_request_action_type_enum.sql  (+13 more)
deployment/: docker-compose.yaml
deployment/nginx/: nginx.conf
docker/: Dockerfile  entrypoint.sh
internal/announcement/repository/: pg.go  repository.go
internal/config/: config.go  environment.go
internal/container/: container.go  interfaces.go  internal.go  repositories.go  usecases.go
internal/http/: http.go
scripts/: api.sh  expired-announcement-consumer.sh  postgres.sh  redis.sh
src/: container.rs  lib.rs  main.rs  shutdown.rs  startup.rs
src/announcement/: domain.rs  http.rs  mod.rs  repository.rs  service.rs
src/auth/: domain.rs  http.rs  mod.rs  repository.rs  service.rs
src/building/: domain.rs  http.rs  repository.rs  service.rs
src/cloud_storage/: client.rs  local.rs  mod.rs  s3.rs
src/config/: config.rs
src/container/: container.rs
src/database/: database_error.rs  mod.rs  pagination.rs
src/device/: domain.rs  http.rs  repository.rs  service.rs
src/email/: client.rs
src/features/: mod.rs
src/floor/: domain.rs  http.rs  repository.rs  service.rs
src/http/: auth_middleware.rs  device_middleware.rs  http.rs  http_error.rs  mod.rs  routes.rs  runtime.rs  validation.rs
src/queue/: consumer.rs  error.rs  mod.rs  producer.rs
src/request/: domain.rs  http.rs  mod.rs  repository.rs  service.rs
src/role/: domain.rs  http.rs  mod.rs  repository.rs  service.rs
src/scheduler/: scheduler.rs
src/user/: domain.rs  http.rs  mod.rs  repository.rs  service.rs
tests/: health_check.rs
tmp/: 1658468244
(+75 files in other folders)
