[package]
name = "enchiridion_api"
version = "0.1.0"
authors = ["Steven Hansel <stevenhanselgo@gmail.com>"]
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "enchiridion_api"

[dependencies]
actix-web = "4.1.0"
sqlx = { version = "0.6", features = [ "runtime-tokio-native-tls" , "postgres", "offline", "chrono" ] }
reqwest = "0.11.11"
tokio = { version = "1.20.1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
futures = "0.3"
async-trait = "0.1.57"
password-hash = { version = "0.4.2", features = ["alloc"] }
argon2 = "0.4"
rand_core = { version = "0.6", features = ["std"] }
secrecy = { version = "0.8.0", features = ["serde"] }
dotenvy = "0.15.1"
validator = { version = "0.16.0", features = ["derive"] }
jwt = "0.16.0"
hmac = "0.12.1"
sha2 = "0.10.2"
chrono = "0.4.19"
actix-cors = "0.6.2"
redis = { version = "0.21.5", features = ["streams"] }
aws-config = "0.46.0"
aws-sdk-s3 = "0.15.0"
actix-multipart = "0.4.0"
