[package]
name = "enchiridion_api"
version = "0.1.0"
authors = ["Steven Hansel <stevenhanselgo@gmail.com>"]
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "enchiridion_api"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3

[dependencies]
actix = "0.13.0"
actix-cors = "0.6.4"
actix-multipart = "0.4.0"
actix-web = "4.2.1"
actix-web-actors = "4.1.0"
sqlx = { version = "0.6", features = [ "runtime-tokio-native-tls" , "postgres", "offline", "chrono" ] }
reqwest = "0.11.11"
tokio = { version = "1.22.0", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["raw_value"] }
futures = "0.3"
async-trait = "0.1.57"
password-hash = { version = "0.4.2", features = ["alloc"] }
argon2 = "0.4"
rand_core = { version = "0.6", features = ["std"] }
secrecy = { version = "0.8.0", features = ["serde"] }
dotenvy = "0.15.6"
validator = { version = "0.16.0", features = ["derive"] }
jwt = "0.16.0"
hmac = "0.12.1"
sha2 = "0.10.5"
chrono = { version = "0.4.22", features = ["serde"] }
aws-config = "0.48.0"
aws-sdk-s3 = "0.18.0"
strum = "0.24"
strum_macros = "0.24"
signal-hook = { version = "0.3.14", features = ["iterator"] }
cron = "0.11.0"
chrono-tz = "0.6.3"
rand = "0.8.5"
lipsum = "0.8.2"
regex = "1.6.0"
lazy_static = "1.4.0"
deadpool-redis = { version = "0.10.2" }
redis = { version = "0.21", default-features = false, features = ["acl", "aio", "script", "geospatial", "streams"] }
thiserror = "1.0.37"
actix-files = "0.6.2"
async-process = "1.6.0"
